[metadata]
name = tkdial
version = 0.0.1
description = Tkinter Dial Widget
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akascape/TkDial
author = Akascape
license = Creative Commons Zero v1.0 Universal
license_file = LICENSE
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
packages = tkdial
